--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/app.py", "use": "@vercel/python" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "api/app.py" }
-  ]
+  "functions": {
+    "api/app.py": {
+      "runtime": "python3.12"
+    }
+  }
 }
