--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "builds": [
     {
       "src": "web/__init__.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "50mb" }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
