--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "web/__init__.py",
+      "src": "index.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "web/__init__.py"
-    }
+    { "src": "/(.*)", "dest": "index.py" }
   ]
 }
